drop global.asax from owin samples, shut down diagnostics when the app is done, add some missing references to selfhosted

--- a/Management/src/AspDotNet4/CloudFoundryOwinSelfHost/manifest-windows.yml
+++ b/Management/src/AspDotNet4/CloudFoundryOwinSelfHost/manifest-windows.yml
@@ -1,6 +1,6 @@
 ﻿---
 applications:
-- name: actuators-owinselfhost
+- name: actuators-owin-selfhost
   memory: 512M
   stack: windows2012R2
   buildpack: binary_buildpack
