--- a/Management/src/AspDotNet4/CloudFoundryOwinSelfHost/packages.config
+++ b/Management/src/AspDotNet4/CloudFoundryOwinSelfHost/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Http" version="2.1.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="2.1.1" targetFramework="net462" />
@@ -32,14 +33,20 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="Steeltoe.CloudFoundry.ConnectorBase" version="2.1.0-dev-00258" targetFramework="net462" />
-  <package id="Steeltoe.Common" version="2.1.0-dev-00065" targetFramework="net462" />
+  <package id="Steeltoe.Common" version="2.1.0-dev-00066" targetFramework="net462" />
+  <package id="Steeltoe.Common.Http" version="2.1.0-dev-00066" targetFramework="net462" />
   <package id="Steeltoe.Extensions.Configuration.CloudFoundryBase" version="2.1.0-dev-00232" targetFramework="net462" />
   <package id="Steeltoe.Extensions.Logging.DynamicLogger" version="2.1.0-dev-00059" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.1" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net462" />
 </packages>
